Fix carousel dots alignment

--- a/source/assets/css/components/carousel.scss
+++ b/source/assets/css/components/carousel.scss
@@ -157,10 +157,9 @@
   bottom: -1rem;
   // left: .25rem;
 
-  @include below(sm) {
-    margin-left: -.75rem;
-  }
-
+  // @include below(sm) {
+  //   margin-left: -.75rem;
+  // }
 
   & > .dot {
     width: 6px;
